# WebServer

./: .gitignore  CMakeLists.txt  ReadMe.md  build.sh
src/: main.cpp
src/Render/: screen.cpp  screen.hpp
src/Server/: Clients.cpp  Clients.hpp  Commands.hpp  Parser.hpp  SOCK.hpp  extra.hpp  test.cpp  test.hpp  vcSERVER.cpp  vcSERVER.hpp
src/Server/Sockets/: Binding.cpp  Binding.hpp  Connecting.cpp  Connecting.hpp  Lisenter.cpp  Lisenter.hpp  MAINSOCK.hpp  Sockets.cpp  Sockets.hpp
tests/: args.cc
